--- a/cart/templates/cart/cart_detail.html
+++ b/cart/templates/cart/cart_detail.html
@@ -2,6 +2,10 @@
 {% load crispy_forms_tags %}
 {% load static %}
 {% load i18n %}
+{% load persian_translate_tags %}
+{% load humanize %}
+
+
 {% block title %} {% trans 'cart' %} {{ product.title }}{% endblock %}
 
 
@@ -56,8 +60,8 @@
                                                     </td>
                                                     <td class="product-price text-right">
                                                             <span class="product-price-wrapper">
-                                                                <span class="money">{% with item.product_obj.price as pro_price %}
-                                                                    {% blocktrans %} {{ pro_price }} $
+                                                                <span class="money">{% with item.product_obj.price|intcomma:False|number_translate as pro_price %}
+                                                                    {% blocktrans %} {{ pro_price  }} $
                                                                     {% endblocktrans %}{% endwith %}</span>
                                                             </span>
                                                     </td>
@@ -80,7 +84,7 @@
                                                     </td>
                                                     <td class="product-total-price">
                                                             <span class="product-price-wrapper">
-                                                                <span class="money">{% with item.total_price as total_price %}
+                                                                <span class="money">{% with item.total_price|intcomma:False|number_translate as total_price %}
                                                                     {% blocktrans %} {{ total_price }} $
                                                                     {% endblocktrans %}{% endwith %}</span>
                                                             </span>
@@ -119,7 +123,7 @@
                                             <span>{% trans 'Total price' %}</span>
                                         </div>
                                         <div class="cart-calculator__item--value">
-                                            <span>{% with cart.get_total_price as total %}
+                                            <span>{% with cart.get_total_price|intcomma:False|number_translate as total %}
                                                 {% blocktrans %}{{ total }} $ {% endblocktrans %}
                                             {% endwith %}
                                             </span>
