--- a/templates/_base.html
+++ b/templates/_base.html
@@ -94,7 +94,7 @@
                                 </a>
                             </li>
                             <li class="header-toolbar__item user-info">
-                                <a href="my-account.html" class="header-toolbar__btn">
+                                <a href="#" class="header-toolbar__btn">
                                     <i class="flaticon flaticon-user"></i>
                                 </a>
                                 <ul class="user-info-menu">
