--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -4,10 +4,15 @@
 {% block title %}login{% endblock %}
 
 {% block content %}
-    <form method="post">
-    {% csrf_token %}
-    {{ form|crispy }}
-    <button type="submit" class="btn btn-primary">{% trans 'Login' %}</button>
-{#    <a href="{% url 'account_set_password' %}">forgot your password?</a>#}
-    </form>
+    {% trans 'login' as x %}
+    {% include 'includes/topheader.html' with header_name=x %}
+    <div class="container">
+        <form method="post">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <a href="{% url 'account_signup' %}">{% trans "Don't you have an account?" %}</a>
+            <br>
+            <button type="submit" class="btn btn-primary">{% trans 'Login' %}</button>
+        </form>
+    </div>
 {% endblock %}
