--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,12 +1,19 @@
 {% extends '_base.html' %}
+{% load i18n %}
 {% load crispy_forms_tags %}
 
 {% block title %}SignUp{% endblock %}
 
 {% block content %}
+     {% trans 'sign up' as x %}
+        {% include 'includes/topheader.html' with header_name=x %}
+    <div class="container">
     <form method="post">
         {% csrf_token %}
         {{ form|crispy }}
-        <button type="submit" class="btn btn-primary">Sign Up</button>
+        <a href="{% url 'account_login' %}">{% trans "Already have an account?" %}</a>
+        <br>
+        <button type="submit" class="btn btn-primary">{% trans 'sign up' %}</button>
     </form>
+    </div>
 {% endblock %}
