--- a/templates/includes/topheader.html
+++ b/templates/includes/topheader.html
@@ -6,7 +6,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="d-flex justify-content-between align-items-center flex-sm-row flex-column">
-                        <h1 class="page-title">{% trans 'Detail of' %} «{{ header_name }}»</h1>
+                        <h1 class="page-title">{{ header_name }}</h1>
                     </div>
                 </div>
             </div>
