--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -1,8 +1,9 @@
 {% extends '_base.html' %}
+{% load i18n %}
 {% block title %}Logout{% endblock %}
 
 {% block content %}
-     {% trans 'logout' as x %}
+        {% trans 'log out' as x %}
         {% include 'includes/topheader.html' with header_name=x %}
          <div class="container">
         <div class="row">
